tests/error/enum_errors/enum_not_a_class_def.py
from guppylang.decorator import guppy


@guppy.enum
def foo(x: int) -> int:
    return x


foo.compile()
